--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,10 @@ profiles.clj
 /.env
 .nrepl-port
 /.shadow-cljs
-package.json
 package-lock.json
-shadow-cljs.edn
 /node_modules
 /log
 dev-config.edn
 test-config.edn
 *.db
+.cpcache
