--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "react": "^16.8.0",
         "react-dom": "^16.8.0",
         "react-dropzone-uploader": "^2.11.0",
-        "shadow-cljs": "^2.11.8",
+        "shadow-cljs": "^2.11.8"
+    },
+    "devDependencies": {
         "xmlhttprequest": "^1.8.0"
     }
+
 }
