--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
     "dependencies": {
-        "@material-ui/core": "4.11.0",
-        "@material-ui/icons": "4.9.1",
-        "react": "^16.8.0",
-        "react-dom": "^16.8.0",
-        "shadow-cljs": "^2.11.8"
+        "@material-ui/core": "^4.11.2",
+        "@material-ui/data-grid": "^4.0.0-alpha.13",
+        "@material-ui/icons": "^4.11.2",
+        "esm": "^3.2.25",
+        "loaders": "^1.1.3",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "shadow-cljs": "^2.11.10"
     },
     "devDependencies": {
         "xmlhttprequest": "^1.8.0"
