--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "@material-ui/core": "^4.11.2",
         "@material-ui/data-grid": "^4.0.0-alpha.13",
         "@material-ui/icons": "^4.11.2",
+        "echarts": "^5.0.2",
         "esm": "^3.2.25",
         "loaders": "^1.1.3",
         "react": "^17.0.1",
