--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
     "dependencies": {
-        "@material-ui/core": "^4.11.2",
-        "@material-ui/data-grid": "^4.0.0-alpha.13",
-        "@material-ui/icons": "^4.11.2",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.14.18",
+        "@mui/material": "^5.14.18",
+        "@mui/styles": "^5.14.18",
+        "@mui/x-data-grid": "^6.18.1",
         "echarts": "^5.0.2",
         "esm": "^3.2.25",
         "loaders": "^1.1.3",
